# nonebot_plugin_antiflash

./: README.md  pyproject.toml
nonebot_plugin_antiflash/: __init__.py  config.py
